[package]
name = "ky"
description = "Simple and Secure password manager"
version = "0.1.0"
authors = ["Vikas Raj <sudo@vikasraj.dev>"]
edition = "2018"
homepage = "https://github.com/numToStr/ky"
repository = "https://github.com/numToStr/ky"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
clap = { git = "https://github.com/clap-rs/clap", rev = "24f5cd6" }
clap_generate = { git = "https://github.com/clap-rs/clap", rev = "24f5cd6" }
dialoguer = "0.8.0"
argon2 = "0.2.1"
rand = { version = "0.8.3", features = ["std"] }
aes-gcm-siv = "0.10.0"
sha2 = "0.9.5"
hex = "0.4.3"
dirs = "3.0.2"
tabled = "0.1.4"
tar = "0.4.35"
zstd = "0.9.0"
qrcodegen = "1.6.0"
# heed = { version = "0.11.0", default-features = false, features = ["mdbx"] }
heed = { version = "0.11.0", default-features = false, features = ["lmdb"] }
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
hkdf = "0.11.0"
num_cpus = "1.13.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
