[package]
name = "ky"
description = "Simple and Secure password manager"
version = "0.1.0"
authors = ["Vikas Raj <sudo@vikasraj.dev>"]
edition = "2018"
homepage = "https://github.com/numToStr/ky"
repository = "https://github.com/numToStr/ky"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap_generate = "3.0.0-rc.7"
clap = { version = "3.0.0-rc.7", features = ["derive", "env", "cargo"] }
dialoguer = "0.9.0"
argon2 = "0.3.2"
rand = { version = "0.8.4", features = ["std"] }
aes-gcm-siv = "0.10.3"
sha2 = "0.10.0"
hex = "0.4.3"
dirs = "4.0.0"
tabled = "0.3.0"
tar = "0.4.38"
zstd = "0.9.1"
qrcodegen = "1.7.0"
# heed = { version = "0.11.0", default-features = false, features = ["mdbx"] }
heed = { version = "0.11.0", default-features = false, features = ["lmdb"] }
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
hkdf = "0.12.0"
num_cpus = "1.13.1"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
