[package]
name = "ky"
description = "Simple and Secure password manager"
version = "0.1.0"
rust-version = "1.61.0"
authors = ["Vikas Raj <sudo@vikasraj.dev>"]
edition = "2018"
homepage = "https://github.com/numToStr/ky"
repository = "https://github.com/numToStr/ky"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
clap = { version = "3.2.5", features = ["derive", "env", "cargo"] }
clap_complete = "3.2.1"
dialoguer = "0.10.1"
argon2 = "0.4.1"
rand = { version = "0.8.5", features = ["std"] }
aes-gcm-siv = "0.10.3"
sha2 = "0.10.2"
hex = "0.4.3"
dirs = "4.0.0"
tabled = "0.7.0"
tar = "0.4.38"
zstd = "0.11.2"
qrcodegen = "1.8.0"
# heed = { version = "0.11.0", default-features = false, features = ["mdbx"] }
heed = { version = "0.11.0", default-features = false, features = ["lmdb"] }
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
hkdf = "0.12.3"

[profile.dev]
debug = 0

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
